--- a/index.html
+++ b/index.html
@@ -1,55 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div class="backs">
-    <div id ="container">
-<div class =navbar>
-    <div class="baims">
-    <p><b>baims</b></p>
-    </div>
-    <p>Courses</p>
-    <div class="Search">
-        <p>Search for anything here...</p>
-    </div>
-    <p>Apply as instructuor</p>
-    <p>sign in</p>
-    <div class="sign">
-        <button>Sign up</button>
-    </div>
-</div>
-<br>
-<br>
-<br>
-<div class="Study">
-    <div class="text">
-        <div class="are">
-    <p><b>Study anytime,<br>Wherever you are</b></p>
-        </div>
-    <br>
-    <br>
-    <p>Study any subject you want from hunderdes of courses with Baims</p>
-    <br>
-    <div class="learn">
-        <p>What do you want to learn</p></div>
-    </div>
-    <div class="image">
-        <img src="/images/student.jpeg"alt>
-    </div>
-</div>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" href="style.css">
+  </head>
+  <body>
     
-    <div class="numbers">
-        <p><b>133+</b><br>Courses</p>
-        <p><b>304+</b><br>Insructors</p>
-        <p><b>56K+</b><br>Students</p>
-        <p><b>11m+</b><br>Lectures views</p>
-    </div>
-    </div>
-</div>
-</body>
+      <div id="container">
+        <div class="navbar">
+          <div class="baims">
+            <h1><b>baims</b></h1>
+          </div>
+
+          <p>Courses</p>
+
+          <div class="search">
+            <i class="fa-light fa-magnifying-glass-location"></i>
+            <input name="searches"placeholder="Search for anything here.." id="inputfield">
+          </div>
+
+          <p>Apply as instructuor</p>
+
+          <a href>sign in</a href>
+
+          <div class="sign-up">
+            <button>Sign up</button>
+          </div>
+        </div>
+        <br />
+        <br />
+        <br />
+        <div class="body">
+          <div class="text">
+            <div class="body-text">
+              <p>
+                <b>Study anytime,<br />Wherever you are</b>
+              </p>
+            </div>
+            <br />
+            <br />
+            <p>
+              Study any subject you want from hunderdes of courses with Baims
+            </p>
+            <br />
+            <div class="input-field">
+              <input name="field"placeholder="What do you want to learn" id="inputfield">
+            </div>
+          </div>
+          <div class="image">
+            <img src="/images/girl-removebg-preview (2).png" alt="student" width="300px" />
+          </div>
+        </div>
+
+        <div class="footer">
+          <div>
+          <h2>133+</h2>
+          <p>Courses</p>
+          </div>
+          <div>
+          <h2>304+</h2>
+          <p>Insructors</p>
+          </div>
+          <div>
+          <h2>56K+</h2>
+          <p>Students</p>
+          </div>
+          <div>
+          <h2>11m+</h2>
+          <p>Lectures views</p>
+          </div>
+        </div>
+      </div>
+  
+  </body>
 </html>
